--- a/.github/workflows/Deploy-WordPress.yml
+++ b/.github/workflows/Deploy-WordPress.yml
@@ -51,9 +51,8 @@ jobs:
         npm run lint
 
     - name: Run tests
-      run: |
-        cd app
-        npm test
+      run: npm test
+
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
