--- a/.github/workflows/Deploy-WordPress.yml
+++ b/.github/workflows/Deploy-WordPress.yml
@@ -30,5 +30,11 @@ jobs:
     - name: Install Dependencies
       run: cd wp-content/themes/twentynineteen && npm install
 
+    - name: Build Styles
+      run: cd wp-content/themes/twentynineteen && npm run build
+
+    - name: Watch for Changes (Optional)
+      run: cd wp-content/themes/twentynineteen && npm run watch
+
     - name: Run Tests
       run: cd wp-content/themes/twentynineteen && npm test
