--- a/.github/workflows/Deploy-WordPress.yml
+++ b/.github/workflows/Deploy-WordPress.yml
@@ -34,6 +34,8 @@ jobs:
       run: cd wp-content/themes/twentynineteen && npm run build
 
     - name: Watch for Changes (Optional)
+      env:
+        SHELL: /bin/bash
       run: cd wp-content/themes/twentynineteen && npm run watch
 
     - name: Run Tests
