--- a/wp-content/themes/twentynineteen/package.json
+++ b/wp-content/themes/twentynineteen/package.json
@@ -10,18 +10,18 @@
     "node": ">=20.10.0",
     "npm": ">=10.2.3"
   },
-"devDependencies": {
-  "@wordpress/browserslist-config": "^6.1.0",
-  "autoprefixer": "^10.4.19",
-  "chokidar-cli": "^3.0.0",
-  "node-sass": "^9.0.0",
-  "npm-run-all": "^4.1.5",
-  "postcss": "^8.4.38",
-  "postcss-cli": "^11.0.0",
-  "postcss-focus-within": "^8.0.1",
-  "rtlcss": "^4.1.1",
-  "jest": "^29.0.0"  // Add this line
-},
+  "devDependencies": {
+    "@wordpress/browserslist-config": "^6.1.0",
+    "autoprefixer": "^10.4.19",
+    "chokidar-cli": "^3.0.0",
+    "node-sass": "^9.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38",
+    "postcss-cli": "^11.0.0",
+    "postcss-focus-within": "^8.0.1",
+    "rtlcss": "^4.1.1",
+    "jest": "^29.0.0"  // Corrected line
+  },
   "rtlcssConfig": {
     "options": {
       "autoRename": false,
@@ -46,6 +46,6 @@
     "build:print": "node-sass print.scss print.css --output-style expanded && postcss -r print.css",
     "build": "run-p \"build:*\"",
     "watch": "chokidar \"**/*.scss\" -c \"npm run build\" --initial",
-    "test": "jest" 
+    "test": "jest"
   }
 }
