--- a/wp-content/themes/twentynineteen/package.json
+++ b/wp-content/themes/twentynineteen/package.json
@@ -20,7 +20,7 @@
     "postcss-cli": "^11.0.0",
     "postcss-focus-within": "^8.0.1",
     "rtlcss": "^4.1.1",
-    "jest": "^29.0.0"  // Corrected line
+    "jest": "^29.0.0"
   },
   "rtlcssConfig": {
     "options": {
